corrected content in episode to overflow-y and adjust to the screen

--- a/src/pages/episodes/episode.module.scss
+++ b/src/pages/episodes/episode.module.scss
@@ -1,7 +1,13 @@
-.episode {
-  max-width: 45rem;
-  padding: 3rem 2rem;
-  margin: 0 auto;
+.episodeContainer {
+  width: 100%;
+  height: calc(100vh - 6.5rem);
+  overflow-y: scroll;
+
+  .episode {
+    padding: 3rem 2rem;
+    max-width: 45rem;
+    margin: 0 auto;
+  }
 
   .thumbnailContainer {
     position: relative;
